# alex-bespalov-portfolio

./: .gitignore  CLAUDE-INSTRUCTIONS.md  CLAUDE.md  README.md  last_stable_version.md  legal-marketing-data-sources-report.md  walker-advertising-ideas.md
000-099-investing/: README.md
000-099-investing/000-shared-core/: .gitignore  README.md  pyproject.toml  requirements.txt
000-099-investing/000-shared-core/scripts/: debug_supabase.py  test_supabase_setup.py
000-099-investing/000-shared-core/sql/: monthly_aggregates.sql
000-099-investing/000-shared-core/src/shared_core/: __init__.py  validators.py
000-099-investing/000-shared-core/tests/: conftest.py  test_archive.py  test_backtest.py  test_cached_fetcher.py  test_data_cache.py  test_data_processing.py  test_divergence.py  test_integration.py  test_live_api.py  test_models.py  test_multi_horizon.py  test_notifications.py  test_property_based.py  test_real_data.py  test_regression.py  test_scoring.py  test_state.py  test_technical.py  test_triggers.py  test_twelve_data.py  test_utils.py  test_validators.py
000-099-investing/012-options-tracker/: .env.example  .gitignore  add_ticker.py  backfill.py  cli.py  config.py  fetcher.py  models.py  package-lock.json  package.json  pipeline.py  pyproject.toml  requirements.txt
000-099-investing/012-options-tracker/.github/workflows/: add_ticker.yml  snapshot.yml
000-099-investing/012-options-tracker/api/: dispatch.js
000-099-investing/012-options-tracker/sql/: schema.sql
000-099-investing/012-options-tracker/src/layouts/: BaseLayout.astro
000-099-investing/012-options-tracker/src/pages/: index.astro
000-099-investing/012-options-tracker/src/styles/: global.css
000-099-investing/012-options-tracker/tests/: test_fetcher.py  test_models.py
000-shared-core/: pyproject.toml  requirements.txt
000-shared-core/src/shared_core/llm/: __init__.py
000-shared-core/tests/: test_llm.py
006-ai-stock-analyzer/: AUDIT_REPORT.md  Makefile  pyproject.toml
006-ai-stock-analyzer/src/: config.py  constants.py  main.py  validation.py
006-ai-stock-analyzer/src/analysis/: analyzer.py  calculator.py
006-ai-stock-analyzer/src/llm/prompts/: analysis.txt
006-ai-stock-analyzer/tests/: conftest.py  test_calculator.py  test_config.py  test_validation.py
200-other/202-product-hunt-ranking/: .dockerignore  .env.example  .gitignore  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  autopilot_log.md  deployment_plan.md  project_status.md  pyproject.toml  qa_checkpoint.md  qa_report.md  requirements.txt
200-other/202-product-hunt-ranking/backfill/: __init__.py  main.py
200-other/202-product-hunt-ranking/docs/: architecture.md  checkpoint.md  future_roadmap.md  init_considerations.md  patterns.md  plan.md
200-other/202-product-hunt-ranking/src/: config.py  main.py  models.py
200-other/202-product-hunt-ranking/src/analysis/: __init__.py  grok_analyzer.py  prompts.py
200-other/202-product-hunt-ranking/src/analytics/: __init__.py  aggregations.py
200-other/202-product-hunt-ranking/src/db/: __init__.py  models.py  supabase_client.py
200-other/202-product-hunt-ranking/src/notifications/: __init__.py  email_digest.py
200-other/202-product-hunt-ranking/src/utils/: http.py  parsing.py
200-other/202-product-hunt-ranking/tests/: test_analysis.py  test_backfill.py  test_config.py  test_db.py  test_main.py  test_parsing.py
200-other/204-transcripts-to-intelligence/: .env.example  .gitignore  PROJECT_PLAN.md  analysis.py  channels.yaml  main.py  pyproject.toml  queue.yaml  requirements.txt  supabase_client.py  transcription.py
200-other/204-transcripts-to-intelligence/prompts/: README.md
200-other/204-transcripts-to-intelligence/prompts/business/: competitor_check.md  idea_generation.md  lead_gen.md  niche_validation.md
200-other/204-transcripts-to-intelligence/prompts/investment/: base_thesis.md
200-other/204-transcripts-to-intelligence/prompts/podcaster_automation/: agent_ideas.md  opportunity_detector.md  software_specs.md  workflow_builder.md
200-other/204-transcripts-to-intelligence/prompts/topics/: extraction.md
200-other/204-transcripts-to-intelligence/scripts/: channel_monitor.py  process_queue.py
200-other/204-transcripts-to-intelligence/src/: __init__.py  config.py
200-other/204-transcripts-to-intelligence/src/analysis/: __init__.py  base.py  base_generator.py  business_ideas.py  investment_thesis.py  llm_client.py  models.py  quote_validator.py  segmenter.py  ticker_validator.py  topic_extractor.py
200-other/204-transcripts-to-intelligence/src/notifications/: __init__.py  base.py  discord.py  email.py  manager.py  resend_email.py  slack.py
200-other/204-transcripts-to-intelligence/src/output/: __init__.py  json_export.py  markdown.py
200-other/204-transcripts-to-intelligence/src/prompts/: __init__.py  loader.py
200-other/204-transcripts-to-intelligence/src/transcript/: __init__.py  base.py  exceptions.py  models.py  orchestrator.py  test_transcript.py
200-other/204-transcripts-to-intelligence/src/utils/: __init__.py  cost_tracker.py  logging.py  retry.py  validation.py
200-other/204-transcripts-to-intelligence/supabase/migrations/: 002_podcaster_automation.sql
200-other/204-transcripts-to-intelligence/tests/fixtures/: mock_llm.py
200-other/204-transcripts-to-intelligence/tests/test_analysis/: __init__.py  test_podcaster_automation.py  test_segmenter.py  test_topic_extractor.py  test_validators.py
200-other/204-transcripts-to-intelligence/tests/test_notifications/: __init__.py  test_notifiers.py
ai-stock-analyzer/: .gitignore  (+3 more)
product_hunt_ranking/: .env.example  .gitignore  README.md  debug_network.py  pyproject.toml  requirements.txt
product_hunt_ranking/.github/workflows/: ci.yml  weekly_ph_rankings.yml
product_hunt_ranking/backfill/: main.py
product_hunt_ranking/backfill/config/: __init__.py  settings.py
product_hunt_ranking/src/: backfill.py  config.py  main.py  models.py
product_hunt_ranking/src/utils/: parsing.py
product_hunt_ranking/tests/: test_config.py  test_parsing.py
(+1342 files in other folders)
