[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shared_core"
version = "0.1.0"
description = "Shared core utilities for investing portfolio projects"
requires-python = ">=3.10"
dependencies = [
    # Data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    
    # API clients
    "requests>=2.28.0",
    "tenacity>=8.0.0",
    
    # LLM providers
    "anthropic>=0.3.0",
    "openai>=1.0.0",
    "google-generativeai>=0.3.0",
    
    # Google Sheets integration
    "gspread>=5.7.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    
    # Transcripts
    "defeatbeta-api>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pandas-stubs>=2.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false  # Many functions return API responses
warn_unused_configs = true
ignore_missing_imports = true
# Strict mode - type errors should be fixed with targeted # type: ignore comments
check_untyped_defs = true
disallow_untyped_defs = false  # Gradual typing - allow untyped functions
strict_optional = true

[tool.pytest.ini_options]
# Coverage threshold is 50% due to network-dependent modules (twelve_data, sheets, etc.)
# Core business logic modules have 85%+ coverage
addopts = "--cov=shared_core --cov-report=term-missing --cov-fail-under=50"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["src/shared_core"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
