[project]
name = "options-tracker"
version = "0.1.0"
description = "LEAPS options pricing tracker with BSM valuation and Streamlit dashboard"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["config", "models", "fetcher", "pricer", "pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
